2013-03-11 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/pandora_revent.pl: Addapted to API's function
	'create_event'.

2013-03-11  Sancho Lerena <slerena@artica.es>

	* util/pandora_xml_stress.conf: Updated conf file to use the new
	threshold values in the generation of xml. Better defaults for
	proc types. 

2013-03-11  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_xml_stress.pl: Added support for critical and warning
	  thresholds.

2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: added in the start or end of downtimes
	the event with the id_user.
	
	Fixes: #3607163

2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/WMIServer.pm: fixed when the wmi query have not a
	password.
	
	Fixes: #3563221

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed alert fired counts when
	reset internal counter and fired times in threshold loop

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Add macros substitution in all the
	text fields of generate event command

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Change the update count of fired alerts 
	condition to increase the count only when a alert is fired first time
	to avoid broke counts

2013-03-05  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Added an option to start the snmptrapd
	  daemon manually.

2013-03-05  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Add the new fields on snmp alerts
	(now there are 10 fields). Bug 3605775

2013-03-05  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Add update counts when validate 
	all the alerts of a policy in CLI option. Bug 3606759

2013-03-04  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	lib/PandoraFMS/DataServer.pm: Clean code and fix some
	forgotten changes in last GIS code

2013-03-04  Sergio Martin <sergio.martin@artica.es>
